...
    BottomSheetShell(
        uiState =
            BottomSheetShellUIState(
                title = title,
                searchQuery = searchQuery,
            ),
        modifier = Modifier.testTag("INPUT_OPTIONS_BOTTOM_SHEET"),
        contentScrollState = rememberScrollState(),
        content = {
            if (filteredOptions.take(maxItemsToShow).isNotEmpty()) {
                content(filteredOptions)
                if (items.size > filteredOptions.size && filteredOptions.size > maxItemsToShow) {
                    Text(
...
        windowInsets = windowInsets,
        buttonBlock = {
            Button(
                modifier =
                    Modifier
                        .fillMaxWidth()
                        .testTag("OPTIONS_BOTTOM_SHEET_DONE_BUTTON")
                        .padding(BottomSheetShellDefaults.buttonBlockPaddings()),
                onClick = onDismiss,
                icon = {
                    Icon(
                        imageVector = Icons.Filled.Check,
                        contentDescription = null,
...
